--- a/RV2015/paper.bib
+++ b/RV2015/paper.bib
@@ -1707,3 +1707,32 @@ and J.  Svenningsson and A. Vajda},
   number = 	 {{TR}3003-1901}
 }
 
+@misc{Hesselink2005,
+  title = {The {B}oyer-{M}oore Majority Vote Algorithm},
+  author = {Wim H. Hesselink},
+  year = {2005}
+}
+
+@techreport{MooreBoyer82,
+    author = {Moore, Strother J. and Boyer, Robert S.},
+    institution = {Institute for Computing Science, University of Texas},
+    location = {Austin},
+    month = feb,
+    number = {1981-32},
+    pages = {22},
+    priority = {2},
+    title = {{MJRTY - A Fast Majority Vote Algorithm}},
+    year = {1981}
+}
+
+@InProceedings{Dutertre:cav2014,
+  author = 	 {Dutertre, Bruno},
+  title = 	 {Yices 2.2},
+  booktitle = {Computer-Aided Verification (CAV'2014)},
+  editor =       {Biere, Armin and Bloem, Roderick},
+  year = 	 2014,
+  volume =       8559,
+  series =       {Lecture Notes in Computer Science},
+  pages =        {737--744},
+  month = 	 {July},
+  publisher =    {Springer}}
