--- a/RV2015/intro.tex
+++ b/RV2015/intro.tex
@@ -21,19 +21,16 @@ properties by applying temporal reasoning using a first order logic
 with built in theories for equality over uninterpreted symbols and
 linear real and integer arithmetic. To date our work has focused on
 verifying inductive properties by applying $k-$induction using
-Satisfiability Modulo Theories (SMT) based model checking.
+Satisfiability Modulo Theories (SMT) based model checking. 
 
-  The case study applies our approach to the Copilot language and
-  framework initially developed at the National Institute of Aerospace
-  and Galois Inc under a contract to NASA.  Copilot is a stream
-  language for generating embedded C-code monitors for verifying
-  system properties of hard real time embedded systems. 
+The case study applies our approach to the Copilot language and
+ framework initially developed at the National Institute of Aerospace
+ and Galois Inc under a contract to NASA.  
 
 
-
-% The overall
- % approach we take was initially inspired by the integration of model
- % checking in Lustre~\cite{YY}. 
+%Copilot is a stream
+%  language for generating embedded C-code monitors for verifying
+%  system properties of hard real time embedded systems. 
   
 
 
