--- a/RV2015/prover.tex
+++ b/RV2015/prover.tex
@@ -1,5 +1,5 @@
 \section{Copilot Prover Interface}~\label{sec:prover} 
-We are the Copilot framework with an extensible interface to multiple
+We have modified  the Copilot framework with an extensible interface to multiple
 provers aimed at checking  safety properties on Copilot
 programs. Currently Copilot interacts with two provers: the first is a
 homegrown prover we call ``the light prover'' built on top of
